--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -15,6 +15,9 @@
     <Filter Include="src">
       <UniqueIdentifier>{3865e68f-82cc-40be-a8bf-e3bf16daac7a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="msg">
+      <UniqueIdentifier>{8583f69c-a16d-44f1-8fdb-04472083be49}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -41,6 +44,21 @@
     <ClInclude Include="..\tool\thread.h">
       <Filter>tool</Filter>
     </ClInclude>
+    <ClInclude Include="..\tool\Mempool.h">
+      <Filter>tool</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\msg\MsgEnum.h">
+      <Filter>msg</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\msg\MsgPool.h">
+      <Filter>msg</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\msg\Player.h">
+      <Filter>msg</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\msg\PlayerMsg.h">
+      <Filter>msg</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +72,12 @@
     </ClCompile>
     <ClCompile Include="..\src\server\ServLinkMgr.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\msg\MsgPool.cpp">
+      <Filter>msg</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\msg\Player.cpp">
+      <Filter>msg</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
