--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="..\tool\buffer.h" />
     <ClInclude Include="..\tool\cLock.h" />
     <ClInclude Include="..\tool\Mempool.h" />
+    <ClInclude Include="..\tool\SafeQueue.h" />
     <ClInclude Include="..\tool\thread.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
